[gd_scene load_steps=4 format=3 uid="uid://d4eakbkyv8knw"]

[ext_resource type="Script" path="res://script/main.gd" id="1_v4yj4"]
[ext_resource type="FontFile" uid="uid://s56di55b46ll" path="res://Minecraftia-Regular.ttf" id="2_kswet"]
[ext_resource type="Script" path="res://script/filedialog.gd" id="3_0s20h"]

[node name="input" type="Node2D"]
script = ExtResource("1_v4yj4")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0901961, 0.0941176, 0.109804, 1)

[node name="Artist" type="LineEdit" parent="." groups=["Input"]]
offset_left = 410.0
offset_top = 285.0
offset_right = 1506.0
offset_bottom = 321.0
tooltip_text = "The artist of the song you want to generate a waveform wallpaper of!"
theme_override_fonts/font = ExtResource("2_kswet")
placeholder_text = "Artist"

[node name="Title" type="LineEdit" parent="." groups=["Input"]]
offset_left = 410.0
offset_top = 321.0
offset_right = 1506.0
offset_bottom = 357.0
tooltip_text = "The title of the song you want to generate a waveform wallpaper of!"
theme_override_fonts/font = ExtResource("2_kswet")
placeholder_text = "Title"

[node name="Description" type="TextEdit" parent="." groups=["Input"]]
offset_left = 412.0
offset_top = 723.0
offset_right = 1508.0
offset_bottom = 1080.0
tooltip_text = "A description of the song you want to generate a waveform wallpaper of!"
theme_override_colors/background_color = Color(0.0901961, 0.0941176, 0.109804, 1)
theme_override_fonts/font = ExtResource("2_kswet")
placeholder_text = "Description"
wrap_mode = 1
autowrap_mode = 2

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(411, 358, 1509, 358, 1509, 722, 411, 722, 411, 357)
width = 2.0
default_color = Color(0.894118, 0.898039, 0.901961, 1)

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open an Audio File"
size = Vector2i(1096, 362)
visible = true
unresizable = true
borderless = true
popup_window = true
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2
root_subfolder = "/home"
script = ExtResource("3_0s20h")

[node name="Selection" type="Label" parent="."]
offset_left = 412.0
offset_top = 395.0
offset_right = 1508.0
offset_bottom = 685.0
theme_override_fonts/font = ExtResource("2_kswet")
theme_override_font_sizes/font_size = 20
text = "Selected file:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
text_overrun_behavior = 1

[node name="ChangeFile" type="Button" parent="."]
offset_left = 412.0
offset_top = 359.0
offset_right = 1508.0
offset_bottom = 395.0
tooltip_text = "Click to change the file to generate a waveform of!"
theme_override_fonts/font = ExtResource("2_kswet")
text = "<Change File>"

[node name="Confirm" type="Button" parent="."]
offset_left = 412.0
offset_top = 685.0
offset_right = 1508.0
offset_bottom = 721.0
tooltip_text = "Click to finalize changes and generate a wallpaper!"
theme_override_fonts/font = ExtResource("2_kswet")
text = "<Generate!>"

[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="button_up" from="ChangeFile" to="FileDialog" method="_on_change_file_button_up"]
[connection signal="button_up" from="Confirm" to="." method="_on_confirm_button_up"]
